--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorAccent">#8596F2</color>
     <color name="background">#F2F2F2</color>
     <color name="notis">#150259</color>
+    <color name="purple">#8692f7</color>
 </resources>
